# protei-practice

./: CMakeLists.txt  README.md  main.cpp  results
Source/: main.cpp  reg.txt  teststrings.txt
